versioned_docs/version-2.4.x/1-核心组件-重点/4-日志组件/4-日志组件.md
---
title: '日志组件'
sidebar_position: 4
---

`glog` 是通用的高性能日志管理模块，实现了强大易用的日志管理功能，是 `GoFrame` 开发框架的核心组件之一。

## 基本介绍

**使用方式**：

```
import "github.com/gogf/gf/v2/os/glog"
```

**接口文档**：

[https://pkg.go.dev/github.com/gogf/gf/v2/os/glog](https://pkg.go.dev/github.com/gogf/gf/v2/os/glog)

**简要说明：**

1. `glog` 模块固定日志文件名称格式为 `*.log`，即固定使用 `.log` 作为日志文件名后缀。
2. `glog` 支持文件输出、日志级别、日志分类、调试管理、调用跟踪、链式操作、滚动切分等等丰富特性。
3. 可以使用 `glog.New` 方法创建 `glog.Logger` 对象用于自定义日志打印，也可以并推荐使用 `glog` 默认提供的包方法来打印日志。
4. 当使用包方法修改模块配置时，注意任何的 `glog.Set*` 设置方法都将会 **全局生效**。
5. 日志内容默认时间格式为 `时间 [级别] 内容 换行`，其中 `时间` 精确到毫秒级别， `级别` 为可选输出， `内容` 为调用端的参数输入， `换行` 为可选输出(部分方法自动为日志内容添加换行符号)，日志内容示例： `2018-10-10 12:00:01.568 [ERRO] 产生错误`。
6. `Print*/Debug*/Info*` 方法输出日志内容到标准输出( `stdout`)，为防止日志的错乱， `Notice*/Warning*/Error*/Critical*/Panic*/Fatal*` 方法也是将日志内容输出到标准输出( `stdout`)。
7. `Panic*` 方法在输出日志信息后会引发 `panic` 错误方法
8. `Fatal*` 方法在输出日志信息之后会停止进程运行，并返回进程状态码值为 `1`(正常程序退出状态码为 `0`)。

## 组件特性

`glog` 组件具有以下显著特性：

- 使用简便，功能强大
- 支持配置管理，使用统一的配置组件
- 支持日志级别
- 支持颜色打印
- 支持链式操作
- 支持指定输出日志文件/目录
- 支持链路跟踪
- 支持异步输出
- 支持堆栈打印
- 支持调试信息开关
- 支持自定义 `Writer` 输出接口
- 支持自定义日志 `Handler` 处理
- 支持自定义日志 `CtxKeys` 键值
- 支持 `JSON` 格式打印
- 支持 `Flags` 特性
- 支持 `Rotate` 滚动切分特性

## 知识图谱

![](/markdown/148b86e9ec923e14a12ec102ce49a777.png)

## 单例对象

日志组件支持单例模式，使用 `g.Log(单例名称)` 获取不同的单例日志管理对象。提供单例对象的目的在于针对不同业务场景可以使用不同配置的日志管理对象。我们推荐使用 `g.Log()` 方法获取单例对象来进行日志操作，该方法内部会自动读取配置文件并初始化单例对象，该初始化操作仅会执行一次。

## `glog.Print` 和 `g.Log().Print` 区别

- `glog` 是日志组件的包名， `g.Log()` 是一个日志组件单例对象。
- `g.Log()` 单例对象通过对象管理组件 `g` 包来维护，对象初始化时会自动读取日志配置，使用简便，大多数场景下推荐使用这种方式使用日志组件。
- `glog` 通过独立组件的形式使用，默认情况下会直接输出日志到终端。也可以通过配置管理方法设置全局配置，或者通过 `New` 创建独立的日志对象使用。

**网友**：为什么会有两种日志打印方式？我应该用哪种方式呢？

**回答**：

由于框架的每个组件都是 **解耦化设计** 的，框架是 **可以作为独立的工具库使用** 的。比如项目只需要使用日志组件，那么可以直接使用 `glog` 包的方法即可，不会引入其他的组件。但在项目工程化使用中，工具库的使用方式会较为繁琐，往往会涉及到配置和组件初始化（大部分场景会引起二次封装），因此框架也提供了一个 **耦合包** 叫做 `g` 包，这个包下面默认加载了一些常用的组件。 `g.Log()` 就是其中的日志组件，它会自动按照工程规范读取并初始化配置对象，快速初始化日志对象并实现单例管理，极大简化工程化下的日志使用。更多的介绍请参考： [对象管理](output/goframe-v2.4-md/核心组件-重点/对象管理)

## 相关文档

- [日志组件-配置管理](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-配置管理)
- [日志组件-日志级别](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-日志级别)
- [日志组件-文件目录](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-文件目录)
- [日志组件-链式操作](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-链式操作)
- [日志组件-颜色打印](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-颜色打印)
- [日志组件-Context](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-Context)
- [日志组件-Handler](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-Handler)
- [日志组件-JSON格式](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-JSON格式)
- [日志组件-异步输出](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-异步输出)
- [日志组件-堆栈打印](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-堆栈打印)
- [日志组件-调试信息](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-调试信息)
- [日志组件-Writer接口](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-Writer接口)
- [日志组件-Flags特性](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-Flags特性)
- [日志组件-Rotate特性](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-Rotate特性)
- [日志组件-常见问题](output/goframe-v2.4-md/核心组件-重点/日志组件/日志组件-常见问题)